# RIRPy

./: .gitignore  LICENSE  README.md  models.py  pyproject.toml
config/: config.toml
example/: demo.py
src/rirpy/: __init__.py  cli.py  config.py  demo.py  model.py  models.py  models_np.py  plot.py  signal.py
src/tests/: test_model.py
