[build-system]
requires = ["setuptools >= 74.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RIRPy"
version = "0.0.7"
description = "Room impulse response calculator using Python"
readme = "README.md"
requires-python = ">= 3.10"
license = { file = "LICENSE" }
authors = [{ name = "William F. Jenkins", email = "wfjenkins@ucsd.edu" }]
dependencies = ["matplotlib", "numba", "numpy", "scipy"]

[tool.setuptools.packages.find]
where = ["src"]
